# pizza-delivery-fastapi

./: .flake8  .gitignore  LICENSE  README.md  start_dev.sh  stop_dev.sh
scripts/: create_tmp_data_from_docker.sh  rm_docker_tmp_files.sh
src/: docker-compose.dev.yml
src/backend/: .dockerignore  main.py  pyproject.toml
src/backend/alembic/: env.py  script.py.mako
src/backend/backend_config/: __init__.py  environments.py
src/backend/config/: __init__.py  enviroments.py  environments.py
src/backend/pizza_delivery_fastapi/: __init__.py  __main__.py  main.py
src/backend/pizza_delivery_fastapi/api/: __init__.py
src/backend/pizza_delivery_fastapi/api/v1/orders/: crud.py  dependencies.py  schemas.py  views.py
src/backend/pizza_delivery_fastapi/api/v1/products/: crud.py  dependencies.py  views.py
src/backend/pizza_delivery_fastapi/auth/: __init__.py  config.py  constants.py  crud.py  dependencies.py  exceptions.py  jwt.py  schemas.py  utils.py  views.py
src/backend/pizza_delivery_fastapi/core/: core_config.py  exceptions.py  service.py
src/backend/pizza_delivery_fastapi/core/db/: __init__.py  db_config.py  db_connect.py
src/backend/pizza_delivery_fastapi/core/models/: __init__.py  base.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  refresh_token.py  user.py
src/backend/scripts/: activate-venv.sh  run.sh
src/config/: .env  .env.exampl
src/config/.docker/backend/pizza_delivery_fastapi/: Dockerfile.dev
src/config/.docker/backend/postgres/: Dockerfil.dev
src/src_config/: .env
(+3 files in other folders)
