[tool.poetry]
name = "pizza-delivery-fastapi"
version = "0.1.0"
description = ""
authors = ["kolesnikovvitaliy <kolesnikovvitaliy@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
pydantic = {extras = ["dotenv", "email"], version = "^2.5.3"}
alembic = "^1.13.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
psycopg2-binary = "^2.9.9"
loguru = "^0.7.2"
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
mypy = "^1.8.0"
isort = "^5.13.2"
autoflake = "^2.2.1"
flake8 = "^7.0.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
